Fix footer spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,11 +2,12 @@
     margin: 0;
     box-sizing: border-box;
 }
-
+html, body {
+    min-height: 1000vh;
+}
 body {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     background-color: peru;
 }
 
@@ -133,8 +134,10 @@ div.info {
 }
 
 footer {
+    width: 100%;
     color: rgb(220, 174, 113);
     text-align: center;
     background-color: saddlebrown;
     padding: 10px;
+    margin-top: auto;
 }
